service and explore

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,12 +1,12 @@
 $primary-color: #1e9cd8;
-$secondary-color: #9a9a9a;
-$tertiary-color: #f9f9f9;
+$secondary-color: #f1f1f1;
+$tertiary-color: #e0e0e0;
 $white-color: #fff;
-$quaternary-color: #fc742e;
-$quinary-color: #50a5f1;
-$senary-color: #f1b44c;
-$septenary-color: #34c38f;
+$quaternary-color: #f9f9f9;
+$quinary-color: #f2f2f2;
+$senary-color: #1e9cd8;
+$black-color: #000000;
+
 $octonary-color: #f46a6a;
 $nonary-color: #50a5f1;
 $decenary-color: #eceff4;
-$secondary-background: rgba(0, 0, 0, 0.05);
