--- a/src/components/banner/index.scss
+++ b/src/components/banner/index.scss
@@ -6,14 +6,14 @@
       width: 14px;
       height: 14px;
       border-radius: 50%;
-      background: $tertiary-color;
+      background: $quaternary-color;
 
       button {
         opacity: 0;
       }
     }
     .slick-active {
-      background: $primary-color;
+      background: $senary-color;
     }
   }
 }
