--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,6 +6,7 @@ $quaternary-color: #f9f9f9;
 $quinary-color: #f2f2f2;
 $senary-color: #1e9cd8;
 $black-color: #000000;
+$border-color: #cccccc;
 
 $octonary-color: #f46a6a;
 $nonary-color: #50a5f1;
