--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -7,7 +7,7 @@ $quinary-color: #f2f2f2;
 $senary-color: #1e9cd8;
 $black-color: #000000;
 $border-color: #cccccc;
+$octonary-color: #ff0000;
 
-$octonary-color: #f46a6a;
 $nonary-color: #50a5f1;
 $decenary-color: #eceff4;
