--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -2,14 +2,14 @@
 
 .service {
   background: $quaternary-color;
-  margin-top: -6px;
+  margin-top: -7px;
 }
 .explore {
   padding-top: 100px;
   padding-bottom: 100px;
 
   h2 {
-    color: #555555;
+    color: $black-color;
   }
 }
 
