--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -6,7 +6,8 @@
 }
 .explore {
   padding-top: 80px;
-  padding-bottom: 100px;
+  padding-bottom: 80px;
+  border-bottom: 1px solid $border-color;
 
   h2 {
     color: $black-color;
@@ -14,7 +15,7 @@
 }
 
 .popular-product {
-  padding-top: 100px;
+  padding-top: 80px;
   padding-bottom: 100px;
 
   .react-tabs__tab-list {
