--- a/src/components/explore/index.scss
+++ b/src/components/explore/index.scss
@@ -1,7 +1,22 @@
 @import '../../styles/index.scss';
 
 .explore-card {
-  p {
-    color: $black-color;
+  .explore-item {
+    img {
+      width: 70%;
+      margin: 0 auto;
+    }
+    transition: all linear 0.3s;
+    p {
+      color: $black-color;
+    }
+    &:hover {
+      img {
+        transform: scale(1.1);
+      }
+      p {
+        color: $octonary-color;
+      }
+    }
   }
 }
