--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -9,6 +9,13 @@
   padding-bottom: 80px;
   border-bottom: 1px solid $border-color;
 
+  .card-explore {
+    margin-bottom: 16px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
   h2 {
     color: $black-color;
   }
