--- a/src/components/service-card/index.scss
+++ b/src/components/service-card/index.scss
@@ -2,7 +2,7 @@
 
 .service-card {
   border: 2px solid transparent;
-  padding: 5px;
+  padding: 10px 5px;
   transition: all linear 0.3s;
   img {
     object-fit: cover;
