site change hover color

--- a/src/components/explore/index.scss
+++ b/src/components/explore/index.scss
@@ -16,7 +16,7 @@
         transform: scale(1.1);
       }
       p {
-        color: $octonary-color;
+        color: $primary-color;
       }
     }
   }
