--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -26,6 +26,7 @@
         outline: none;
       }
       &--selected {
+        color: $primary-color;
         border-bottom: 3px solid $primary-color;
       }
     }
