--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -32,6 +32,9 @@
     transition: all linear 0.3s;
   }
   &:hover {
+    // transform: scale(1.1);
+    box-shadow: 0 5px 25px 0 rgb(0 0 0 / 10%);
+
     .feature {
       transform: translateX(0px);
       opacity: 1;
