--- a/src/app/(category)/category/[slug]/page.scss
+++ b/src/app/(category)/category/[slug]/page.scss
@@ -1,1 +1,52 @@
 @import '../../../../styles/index.scss';
+
+.horizontal-slider {
+  width: 100%;
+  height: 8px;
+  position: relative; /* Add position relative */
+}
+
+.example-thumb-0 {
+  width: 10px;
+  height: 10px;
+  background-color: $primary-color;
+  border: 0;
+  cursor: pointer;
+  outline: none;
+  position: absolute;
+  z-index: 2;
+  transform: translateY(-50%);
+}
+.example-thumb-1 {
+  width: 10px;
+  height: 10px;
+  background-color: $primary-color;
+  border: 0;
+  cursor: pointer;
+  outline: none;
+  position: absolute;
+  left: 140px;
+  z-index: 2;
+  transform: translateY(-50%);
+}
+
+.example-track-0 {
+  background-color: $primary-color;
+  width: 100%;
+  height: 2px;
+}
+
+.example-track-1 {
+  background-color: $primary-color;
+  width: 90%;
+}
+
+.price-input {
+  width: 60px;
+  height: 20px;
+  border: 1px solid $black-color;
+  padding: 2px;
+  &:focus-visible {
+    outline: none;
+  }
+}
