--- a/src/components/filterbox/index.scss
+++ b/src/components/filterbox/index.scss
@@ -2,6 +2,7 @@
 
 .filter-box {
   border: 1px solid $border-color;
+  box-sizing: border-box;
 
   .title {
     border-bottom: 1px solid $border-color;
