--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -8,6 +8,6 @@ $senary-color: #1e9cd8;
 $black-color: #000000;
 $border-color: #cccccc;
 $octonary-color: #ff0000;
+$nonary-color: #707070;
 
-$nonary-color: #50a5f1;
 $decenary-color: #eceff4;
