--- a/src/app/(category)/category/[slug]/page.scss
+++ b/src/app/(category)/category/[slug]/page.scss
@@ -1,5 +1,5 @@
 @import '../../../../styles/index.scss';
-
+/* ============ sidebar ================*/
 .horizontal-slider {
   width: 100%;
   height: 8px;
@@ -48,5 +48,39 @@
   padding: 2px;
   &:focus-visible {
     outline: none;
+  }
+}
+/* ============ sidebar End================*/
+.filter-bar {
+  background: $secondary-color;
+
+  .icon {
+    color: $nonary-color;
+  }
+
+  .active {
+    background: $white-color;
+
+    .icon {
+      color: $black-color;
+    }
+  }
+  .action {
+    .active {
+      background: $white-color;
+    }
+  }
+}
+
+.filter-products {
+  border-bottom: 1px solid $secondary-color;
+  .product-card {
+    border-right: 1px solid $border-color;
+    &:nth-child(4n) {
+      border: 0;
+    }
+    &:last-child {
+      border: 0;
+    }
   }
 }
