category page done

--- a/src/app/(category)/category/[slug]/page.scss
+++ b/src/app/(category)/category/[slug]/page.scss
@@ -84,3 +84,12 @@
     }
   }
 }
+
+.bottom-filter {
+  .action-area {
+    border: 1px solid $border-color;
+  }
+  .active {
+    border: 1px solid $border-color;
+  }
+}
