--- a/src/components/box/index.scss
+++ b/src/components/box/index.scss
@@ -5,6 +5,7 @@
   .header {
     padding: 10px 20px;
     border-bottom: 1px solid $border-color;
+    color: $primary-color;
     .step {
       width: 20px;
       height: 20px;
