--- a/src/app/loading.module.scss
+++ b/src/app/loading.module.scss
@@ -10,7 +10,7 @@
 .loadingSpinner {
   border: 4px solid rgba(255, 255, 255, 0.3);
   border-radius: 50%;
-  border-top: 4px solid #3498db; /* Color of the loading spinner */
+  border-top: 4px solid #164194; /* Color of the loading spinner */
   width: 40px;
   height: 40px;
   animation: spin 1s linear infinite;
