--- a/src/components/filterbox/index.scss
+++ b/src/components/filterbox/index.scss
@@ -1,10 +1,10 @@
 @import '../../styles/index.scss';
 
 .filter-box {
-  border: 1px solid $border-color;
+  // border: 1px solid $border-color;
   box-sizing: border-box;
 
   .title {
-    border-bottom: 1px solid $border-color;
+    border-bottom: 1px solid #f0f0f0;
   }
 }
