--- a/src/components/filterbox/index.scss
+++ b/src/components/filterbox/index.scss
@@ -3,6 +3,7 @@
 .filter-box {
   // border: 1px solid $border-color;
   box-sizing: border-box;
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.12);
 
   .title {
     border-bottom: 1px solid #f0f0f0;
