--- a/src/components/filterbox/index.scss
+++ b/src/components/filterbox/index.scss
@@ -3,7 +3,8 @@
 .filter-box {
   // border: 1px solid $border-color;
   box-sizing: border-box;
-  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 1px 1px 4px 0px rgba(29, 29, 29, 0.12);
+  // border: 1px solid #f0f0f0;
 
   .title {
     border-bottom: 1px solid #f0f0f0;
