--- a/src/components/fromgroup/index.scss
+++ b/src/components/fromgroup/index.scss
@@ -2,7 +2,7 @@
 
 .from-group {
   .form-input {
-    border: 1px solid $border-color;
+    border: 1px solid $secondary-color;
     padding: 10px 5px;
     &::placeholder {
       font-style: italic;
