--- a/src/app/register/page.scss
+++ b/src/app/register/page.scss
@@ -1,5 +1,12 @@
 @import '../../styles/index.scss';
 
+.register {
+  margin-top: 80px;
+  padding-bottom: 80px;
+  .register-area {
+    box-shadow: -1px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  }
+}
 .auth-border {
   &::after {
     position: absolute;
