--- a/src/app/password/reset/page.scss
+++ b/src/app/password/reset/page.scss
@@ -6,7 +6,7 @@
     box-shadow: -1px 0px 10px 0px rgba(0, 0, 0, 0.1);
   }
 
-  .forget-button {
+  /*  .forget-button {
     background: transparent;
     border: 1px solid $primary-color;
     color: $black-color;
@@ -16,5 +16,5 @@
       background: $primary-color;
       color: $white-color;
     }
-  }
+  } */
 }
