--- a/src/app/(product)/products/[id]/page.scss
+++ b/src/app/(product)/products/[id]/page.scss
@@ -71,7 +71,8 @@
   .description {
     .desc {
       margin-top: 10px;
-      border: 1px solid $border-color;
+      // border: 1px solid $border-color;
+      box-shadow: $primary-shadow;
       .react-tabs__tab-list {
         display: flex;
         background: $secondary-color;
@@ -81,11 +82,27 @@
       }
       .react-tabs__tab {
         cursor: pointer;
-        padding: 13px 20px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-right: 26px;
+        padding-left: 26px;
+        // margin-right: 13px;
+        border-right: 1px solid $white-color;
+
         font-size: 14px;
 
         &--selected {
           color: $primary-color;
+          position: relative;
+          &::after {
+            position: absolute;
+            content: '';
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background: $primary-color;
+          }
         }
         &:focus-visible {
           outline: none;
