--- a/src/app/password/confirm/page.scss
+++ b/src/app/password/confirm/page.scss
@@ -3,6 +3,6 @@
   padding-top: 80px;
   padding-bottom: 80px;
   .forget-area {
-    box-shadow: -1px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: $primary-shadow;
   }
 }
