--- a/src/app/register/page.scss
+++ b/src/app/register/page.scss
@@ -4,7 +4,7 @@
   margin-top: 80px;
   padding-bottom: 80px;
   .register-area {
-    box-shadow: -1px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: $primary-shadow;
   }
 }
 .auth-border {
