--- a/src/app/(product)/products/[id]/page.scss
+++ b/src/app/(product)/products/[id]/page.scss
@@ -52,6 +52,15 @@
   .r-price {
     color: $border-color;
   }
+  .d-price {
+    .discount {
+      background: $octonary-color;
+      color: $white-color;
+      font-size: 14px;
+      margin-left: 10px;
+      padding: 3px;
+    }
+  }
   .emi {
     border-bottom: 1px solid $border-color;
   }
