--- a/src/app/(product)/products/[id]/page.scss
+++ b/src/app/(product)/products/[id]/page.scss
@@ -12,7 +12,7 @@
   .product-item {
     padding: 4px;
     img {
-      border: 1px solid $border-color;
+      border: 1px solid #ececec;
     }
     &:focus-visible {
       outline: none;
@@ -20,7 +20,7 @@
   }
 
   .view-image {
-    border: 1px solid $border-color;
+    border: 1px solid #ececec;
   }
 
   .slick-arrow {
@@ -81,13 +81,14 @@
     .desc {
       margin-top: 10px;
       // border: 1px solid $border-color;
-      box-shadow: $primary-shadow;
+      box-shadow: -1px 0px 6px 0px rgba(0, 0, 0, 0.1);
       .react-tabs__tab-list {
         display: flex;
         background: $secondary-color;
         font-family: $primary-font;
         font-size: 20px;
         font-weight: bold;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       }
       .react-tabs__tab {
         cursor: pointer;
@@ -96,6 +97,7 @@
         padding-right: 26px;
         padding-left: 26px;
         font-family: $secondary-font;
+        font-weight: 400;
         font-size: 14px;
         // margin-right: 13px;
         border-right: 1px solid $white-color;
@@ -122,8 +124,8 @@
 
       .tab-panel {
         padding: 12px;
-        font-family: $primary-font;
-        font-size: 18px;
+        font-family: $secondary-font;
+        font-size: 12px;
         font-weight: 400;
       }
     }
