--- a/src/app/(product)/products/[id]/page.scss
+++ b/src/app/(product)/products/[id]/page.scss
@@ -96,7 +96,7 @@
         padding-bottom: 10px;
         padding-right: 26px;
         padding-left: 26px;
-        font-family: $secondary-font;
+        font-family: 'Gotham';
         font-weight: 400;
         font-size: 14px;
         // margin-right: 13px;
@@ -124,7 +124,7 @@
 
       .tab-panel {
         padding: 12px;
-        font-family: $secondary-font;
+        font-family: 'Gotham';
         font-size: 12px;
         font-weight: 400;
       }
