--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -9,5 +9,5 @@ $black-color: #000000;
 $border-color: #cccccc;
 $octonary-color: #ff0000;
 $nonary-color: #707070;
-
-$decenary-color: #eceff4;
+$decenary-color: #d6d6d6;
+$ash-color: #b3b2b3;
