--- a/src/app/(order)/cart/page.scss
+++ b/src/app/(order)/cart/page.scss
@@ -84,3 +84,18 @@
     }
   }
 }
+
+/* 
+.cart-service {
+  background: $primary-color;
+  .service-card {
+    color: $white-color;
+    h4 {
+      color: $white-color;
+    }
+    h6 {
+      color: $white-color;
+    }
+  }
+}
+ */
