--- a/src/app/(product)/products/[id]/page.scss
+++ b/src/app/(product)/products/[id]/page.scss
@@ -97,7 +97,7 @@
         padding-right: 26px;
         padding-left: 26px;
         font-family: 'Gotham';
-        font-weight: 400;
+        font-weight: 500;
         font-size: 14px;
         // margin-right: 13px;
         border-right: 1px solid $white-color;
@@ -124,9 +124,18 @@
 
       .tab-panel {
         padding: 12px;
-        font-family: 'Gotham';
-        font-size: 12px;
-        font-weight: 400;
+        .specification {
+          font-family: 'Gotham';
+          font-size: 12px;
+          font-weight: 400;
+        }
+        .review {
+          .all-reviews {
+            svg {
+              color: $primary-color;
+            }
+          }
+        }
       }
     }
   }
