--- a/src/app/profile/page.scss
+++ b/src/app/profile/page.scss
@@ -1,4 +1,9 @@
+@import '../../styles/index.scss';
+
 .profile {
   padding-top: 80px;
   padding-bottom: 80px;
+}
+.table-border {
+  border-top: 1px solid $secondary-color;
 }
