--- a/src/app/compare/page.scss
+++ b/src/app/compare/page.scss
@@ -9,5 +9,22 @@
   }
   .jobair {
     grid-template-columns: 250px repeat(4, 1fr);
+    border-right: 1px solid $border-color;
+    .product-card {
+      border-left: 1px solid $border-color;
+      border-bottom: 1px solid $border-color;
+      &:last-child {
+        background: #000;
+        border-right: 1px solid $border-color;
+      }
+    }
+    .product-row {
+      background: $tertiary-color;
+      border-bottom: 1px solid $border-color;
+      border-left: 1px solid $border-color;
+    }
+  }
+  .danger-text {
+    color: $octonary-color;
   }
 }
