--- a/src/components/invoice/index.scss
+++ b/src/components/invoice/index.scss
@@ -60,6 +60,7 @@
     width: 400px;
     margin-left: auto;
     margin-top: 20px;
+    font-family: $secondary-font;
 
     .item {
       display: flex;
