--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -4,4 +4,9 @@
   background: $primary-color;
   color: $white-color;
   border: 0;
+  transition: all linear 0.3s;
+
+  &:hover {
+    background: $hover-color;
+  }
 }
