--- a/src/components/explore/index.scss
+++ b/src/components/explore/index.scss
@@ -1,6 +1,8 @@
 @import '../../styles/index.scss';
 
 .explore-card {
+  padding: 16px;
+  margin-bottom: 10px;
   .explore-item {
     img {
       width: 80%;
