--- a/src/app/(product)/products/[id]/page.scss
+++ b/src/app/(product)/products/[id]/page.scss
@@ -79,7 +79,7 @@
   border-bottom: 1px solid #ececec;
   .description {
     .desc {
-      margin-top: 10px;
+      margin-top: 30px;
       // border: 1px solid $border-color;
       box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
       .react-tabs__tab-list {
@@ -92,13 +92,10 @@
       }
       .react-tabs__tab {
         cursor: pointer;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-right: 26px;
-        padding-left: 26px;
+        padding: 8px 26px;
         font-family: 'Gotham';
         font-weight: 700;
-        font-size: 16px;
+        font-size: 15px;
         // margin-right: 13px;
         border-right: 1px solid $white-color;
 
