--- a/src/components/title/index.scss
+++ b/src/components/title/index.scss
@@ -1,7 +1,7 @@
 @import '../../styles/index.scss';
 
 .category-title {
-  border-bottom: 2px solid $border-color;
+  border-bottom: 2px solid $light-border;
 }
 
 .view {
