--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -11,5 +11,5 @@ $octonary-color: #ff0000;
 $nonary-color: #707070;
 $decenary-color: #d6d6d6;
 $ash-color: #b3b2b3;
-
 $hover-color: #2456b5;
+$light-border: #ececec;
