--- a/src/app/compare/page.scss
+++ b/src/app/compare/page.scss
@@ -1,13 +1,40 @@
 @import '../../styles/index.scss';
 .compare {
-  padding-top: 80px;
+  padding-top: 60px;
   padding-bottom: 80px;
 
-  .header {
-    background: $tertiary-color;
-    padding: 15px 0;
+  .compare-table {
+    thead {
+      background: $tertiary-color;
+    }
+    tbody {
+      tr {
+        background: $secondary-color;
+        transition: all linear 0.3s;
+
+        &:hover {
+          background: $quaternary-color;
+        }
+
+        &:nth-child(odd) {
+          background: $white-color;
+
+          &:hover {
+            background: $quaternary-color;
+          }
+        }
+
+        td,
+        th {
+          border: 1px solid $border-color;
+        }
+      }
+    }
   }
-  .jobair {
+
+  /*   .header {
+  } */
+  /*  .jobair {
     grid-template-columns: 250px repeat(4, 1fr);
     border-right: 1px solid $border-color;
     .product-card {
@@ -22,7 +49,7 @@
       border-bottom: 1px solid $border-color;
       border-left: 1px solid $border-color;
     }
-  }
+  } */
   .danger-text {
     color: $octonary-color;
   }
