--- a/src/app/(category)/category/[slug]/page.scss
+++ b/src/app/(category)/category/[slug]/page.scss
@@ -31,7 +31,7 @@
 }
 
 .example-track-0 {
-  background-color: $primary-color;
+  background-color: $hover-color;
   width: 100%;
   height: 2px;
 }
