--- a/src/app/compare/page.scss
+++ b/src/app/compare/page.scss
@@ -26,7 +26,13 @@
 
         td,
         th {
-          border: 1px solid $border-color;
+          border: 1px solid $tertiary-color;
+          border-top: 0;
+        }
+        .icons {
+          svg {
+            color: $primary-color;
+          }
         }
       }
     }
