--- a/src/app/(product)/products/[id]/page.scss
+++ b/src/app/(product)/products/[id]/page.scss
@@ -71,6 +71,7 @@
       justify-content: center;
       align-items: center;
       height: 100%;
+      transition: all linear 0.3s;
     }
   }
 }
