--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -9,6 +9,9 @@
   .absolute-item {
     background: $octonary-color;
   }
+  .search-input {
+    border: 1px solid $border-color;
+  }
   .logo {
     width: 150px;
     height: auto;
