--- a/src/app/(product)/products/[id]/page.scss
+++ b/src/app/(product)/products/[id]/page.scss
@@ -50,7 +50,7 @@
     border-bottom: 1px solid #ececec;
   }
   .r-price {
-    color: #ececec;
+    color: $nonary-color;
   }
   .discount {
     background: $octonary-color;
