--- a/src/app/(product)/products/[id]/page.scss
+++ b/src/app/(product)/products/[id]/page.scss
@@ -9,6 +9,10 @@
     width: 15px;
     height: 15px;
   }
+  .award {
+    width: 25px;
+    height: 20px;
+  }
   .product-item {
     padding: 4px;
     img {
