--- a/src/components/list-card/index.scss
+++ b/src/components/list-card/index.scss
@@ -51,7 +51,7 @@
       background: $primary-color;
       color: $white-color;
     }
-    margin: 0 5px;
+    margin-right: 5px;
   }
   .stock {
     border-bottom: 2px solid #e0e0e0;
