--- a/src/components/question-ans/index.scss
+++ b/src/components/question-ans/index.scss
@@ -1,11 +1,8 @@
 @import '../../styles/index.scss';
 
 .question {
-  box-shadow: 0px 0px 4px rgba(34, 34, 34, 0.1);
+  box-shadow: 0px 0px 14px 1px rgba(0, 0, 0, 0.07);
 
-  .title {
-    background: $quinary-color;
-  }
   .open {
     background: $primary-color;
 
