--- a/src/components/status-button/index.scss
+++ b/src/components/status-button/index.scss
@@ -3,7 +3,7 @@
 .toggle-button {
   width: 35px;
   height: 14px;
-  background-color: $nonary-color;
+  background-color: #dedede;
   border-radius: 15px;
   cursor: pointer;
   position: relative;
