--- a/src/components/service-card/index.scss
+++ b/src/components/service-card/index.scss
@@ -19,3 +19,11 @@
     border: 1px solid $primary-color;
   }
 }
+
+@media (max-width: 575.98px) {
+  .service-card {
+    img {
+      width: 40px;
+    }
+  }
+}
