--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -25,3 +25,12 @@
     }
   }
 }
+
+@media screen and (max-width: 575.98px) {
+  .navbar {
+    .logo {
+      width: 100px;
+      height: auto;
+    }
+  }
+}
