--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -41,6 +41,11 @@
     &:nth-child(4n) {
       border: 0;
     }
+    @media screen and (max-width: 768px) {
+      &:nth-child(2n) {
+        border: 0;
+      }
+    }
   }
 }
 
