--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -72,6 +72,8 @@
   @media screen and (max-width: 768px) {
     padding-top: 50px;
     padding-bottom: 50px;
+    padding-left: 1px;
+    padding-right: 1px;
     .product-card {
       &:nth-child(2n) {
         border: 0;
