complete banner & home page

--- a/src/components/banner/index.scss
+++ b/src/components/banner/index.scss
@@ -19,4 +19,9 @@
       background: $primary-color;
     }
   }
+  @media screen and (max-width: 768px) {
+    ul {
+      margin-bottom: 40px;
+    }
+  }
 }
