--- a/src/app/login/page.scss
+++ b/src/app/login/page.scss
@@ -2,6 +2,11 @@
 .login-page {
   padding-top: 80px;
   padding-bottom: 80px;
+
+  @media screen and (max-width: 768px) {
+    padding-top: 40px;
+    padding-bottom: 0px;
+  }
 }
 .register-outline {
   background: transparent;
