--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -27,6 +27,9 @@ footer {
   .bottom-image {
     width: auto;
     height: 25px;
+    img {
+      object-fit: cover;
+    }
   }
   .download-apps {
     width: 125px;
