--- a/src/app/(product)/products/[id]/page.scss
+++ b/src/app/(product)/products/[id]/page.scss
@@ -92,7 +92,7 @@
         background: $secondary-color;
         font-family: $primary-font;
         font-size: 20px;
-        font-weight: bold;
+        font-weight: 700;
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
       }
       .react-tabs__tab {
@@ -118,6 +118,10 @@
         }
         &:focus-visible {
           outline: none;
+        }
+        @media screen and (max-width: 768px) {
+          font-size: 12px;
+          padding: 6px 13px;
         }
       }
 
