complete product page

--- a/src/app/(product)/products/[id]/page.scss
+++ b/src/app/(product)/products/[id]/page.scss
@@ -82,6 +82,7 @@
 
 .more-details {
   border-bottom: 1px solid #ececec;
+  overflow-x: hidden;
   .description {
     .desc {
       margin-top: 30px;
