--- a/src/components/service-card/index.scss
+++ b/src/components/service-card/index.scss
@@ -2,7 +2,7 @@
 
 .service-card {
   border: 1px solid transparent;
-  padding: 10px 5px;
+  padding: 10px;
   transition: all linear 0.3s;
   .image {
     width: 15%;
