--- a/src/components/megamenu/index.scss
+++ b/src/components/megamenu/index.scss
@@ -1,6 +1,10 @@
 @import '../../styles/index.scss';
 
 .heading {
+  .mega-arrow {
+    position: absolute;
+    right: 0;
+  }
   .sub-heading {
     background: $white-color;
     width: 230px;
@@ -32,7 +36,7 @@
           transition: all linear 0.3s;
 
           a {
-            padding-left: 4px;
+            padding-left: 10px;
             transition: all linear 0.3s;
           }
 
