--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -26,7 +26,7 @@ footer {
   }
   .bottom-image {
     width: auto;
-    height: 25px;
+    height: 100%;
     img {
       object-fit: cover;
     }
