product card organized

--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -1,7 +1,8 @@
 @import '../../styles/index.scss';
 
 footer {
-  margin-top: 30px;
+  padding-top: 40px;
+  border-top: 1px solid #cccccc;
 
   background: $white-color;
 
