--- a/src/app/register/page.scss
+++ b/src/app/register/page.scss
@@ -26,6 +26,9 @@
       background: $border-color;
     }
   }
+  .warning {
+    color: $octonary-color;
+  }
   @media screen and (max-width: 768px) {
     padding-top: 40px;
     padding-bottom: 0px;
