--- a/src/app/register/page.scss
+++ b/src/app/register/page.scss
@@ -29,8 +29,18 @@
   .warning {
     color: $octonary-color;
   }
-  @media screen and (max-width: 768px) {
-    padding-top: 40px;
-    padding-bottom: 0px;
+}
+@media screen and (max-width: 768px) {
+  .register {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    .auth-border {
+      &::after {
+        display: none;
+      }
+      &::before {
+        display: none;
+      }
+    }
   }
 }
