--- a/src/components/emi-popup/index.scss
+++ b/src/components/emi-popup/index.scss
@@ -11,7 +11,17 @@
     padding: 30px;
     height: 85%;
     background: #fff;
+    z-index: 10;
     display: flex;
     justify-content: center;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .emi-popup {
+    .main-wrapper {
+      width: 95%;
+      padding: 10px;
+    }
   }
 }
