--- a/src/components/service-card/index.scss
+++ b/src/components/service-card/index.scss
@@ -6,6 +6,7 @@
   transition: all linear 0.3s;
   .image {
     width: 15%;
+    margin-right: 6px;
     img {
       object-fit: cover;
       width: auto;
@@ -13,7 +14,7 @@
     }
   }
   .text {
-    width: 85%;
+    text-align: left;
     h4 {
       color: $primary-color;
     }
