--- a/src/components/share-popup/index.scss
+++ b/src/components/share-popup/index.scss
@@ -1,7 +1,7 @@
 @import '../../styles/index.scss';
 
 .share-popup {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
