fixed card issue

--- a/src/app/(product)/product/[slug]/page.scss
+++ b/src/app/(product)/product/[slug]/page.scss
@@ -1,12 +1,12 @@
-@import '../../../../styles/index.scss';
+@import "../../../../styles/index.scss";
 
 .product-details {
   border-top: 1px solid #ececec;
   border-bottom: 1px solid #ececec;
   padding-bottom: 50px;
 
-  .pointer{
-    &:hover{
+  .pointer {
+    &:hover {
       cursor: pointer;
     }
   }
@@ -20,9 +20,12 @@
     height: 20px;
   }
   .product-item {
+    height: 100px;
     padding: 4px;
     img {
       border: 1px solid #ececec;
+      height: 100%;
+      object-fit: cover;
     }
     &:focus-visible {
       outline: none;
@@ -105,7 +108,7 @@
       .react-tabs__tab {
         cursor: pointer;
         padding: 8px 26px;
-        font-family: 'Gotham';
+        font-family: "Gotham";
         font-weight: 700;
         border-right: 1px solid $white-color;
         font-size: 15px;
@@ -115,7 +118,7 @@
           position: relative;
           &::after {
             position: absolute;
-            content: '';
+            content: "";
             bottom: 0;
             left: 0;
             width: 100%;
@@ -135,7 +138,7 @@
       .tab-panel {
         padding: 12px;
         .specification {
-          font-family: 'Gotham';
+          font-family: "Gotham";
           font-size: 12px;
           font-weight: 400;
         }
