--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -1,10 +1,10 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 .product-card {
   .image {
     height: 200px;
     img {
       width: 100%;
-      height: 100%;
+      max-height: 200px;
       object-fit: contain;
     }
   }
