stock out product card

--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -65,6 +65,9 @@
     }
   }
   .stock-out {
-    background: $secondary-color;
+    background: #6c757d;
+    &:hover {
+      background: #6c757d;
+    }
   }
 }
